import java.sql.Connection;
import java.sql.PreparedStatement;
import java.sql.ResultSet;
import java.sql.SQLException;
import java.util.ArrayList;
import java.util.List;

public class StudentController {
    private Connection conn;

    public StudentController(Connection conn) {
        this.conn = conn;
    }

    public void createStudent(String firstName, String lastName, int age, float grade) {
        String sql = "INSERT INTO student (first_name, last_name, age, grade) VALUES (?, ?, ?, ?)";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setString(1, firstName);
            pstmt.setString(2, lastName);
            pstmt.setInt(3, age);
            pstmt.setFloat(4, grade);
            pstmt.executeUpdate();
            System.out.println("Student created: " + firstName + " " + lastName + ", Age: " + age);
            // Export to JSON
            try { new JsonManager().exportToJson(); } catch (Exception ex) { ex.printStackTrace(); }
        } catch (SQLException e) {
            System.out.println("An error occurred while creating the student.");
            e.printStackTrace();
        }
    }

    public void modifyStudent(int id, String first_name, String last_name, int age, float grade) {
        String sql = "UPDATE student SET first_name = ?, last_name = ?, age = ?, grade = ? WHERE id = ?";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setString(1, first_name);
            pstmt.setString(2, last_name);
            pstmt.setInt(3, age);
            pstmt.setFloat(4, grade);
            pstmt.setInt(5, id);
            pstmt.executeUpdate();
            // Export to JSON
            try { new JsonManager().exportToJson(); } catch (Exception ex) { ex.printStackTrace(); }
        } catch (SQLException e) {
            System.out.println("User could not be modified.");
            e.printStackTrace();
        }
        System.out.println("Student modified: ID: " + id + ", First Name: " + first_name + ", Last Name: " + last_name + ", Age: " + age + ", Grade: " + grade);
    }

    public void deleteStudent(int id) {
        String sql = "DELETE FROM student WHERE id = ?";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setInt(1, id);
            pstmt.executeUpdate();
            // Export to JSON
            try { new JsonManager().exportToJson(); } catch (Exception ex) { ex.printStackTrace(); }
        } catch (SQLException e) {
            System.out.println("An error occurred while deleting the student.");
            e.printStackTrace();
        }
        System.out.println("Student deleted: ID: " + id);
    }

    public List<Student> getAllStudents() {
        List<Student> students = new ArrayList<>();
        String sql = "SELECT * FROM student";
        try (java.sql.Statement stmt = conn.createStatement();
             ResultSet rs = stmt.executeQuery(sql)) {
            while (rs.next()) {
                Student s = new Student(
                    rs.getInt("id"),
                    rs.getString("first_name"),
                    rs.getString("last_name"),
                    rs.getInt("age"),
                    rs.getFloat("grade")
                );
                students.add(s);
            }
        } catch (SQLException e) {
            e.printStackTrace();
        }
        return students;
    }

    public List<Student> getStudentByAge(int age) {
        List<Student> students = new ArrayList<>();
        String sql = "SELECT * FROM student WHERE age > ?";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setInt(1, age);
            ResultSet rs = pstmt.executeQuery();
            while (rs.next()) {
                Student s = new Student(
                    rs.getInt("id"),
                    rs.getString("first_name"),
                    rs.getString("last_name"),
                    rs.getInt("age"),
                    rs.getFloat("grade")
                );
                students.add(s);
            }
        } catch (SQLException e) {
            e.printStackTrace();
        }
        return students;
    }

    public List<Student> getStudentByName(String lastName){
        List<Student> students = new ArrayList<>();
        String sql = "SELECT * FROM student WHERE last_name ILIKE ?";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setString(1, "%" + lastName + "%");
            ResultSet rs = pstmt.executeQuery();
            while (rs.next()) {
                Student s = new Student(
                    rs.getInt("id"),
                    rs.getString("first_name"),
                    rs.getString("last_name"),
                    rs.getInt("age"),
                    rs.getFloat("grade")
                );
                students.add(s);
            }
        } catch (SQLException e) {
            e.printStackTrace();
        }
        return students;
    }

    public List<Student> getStudentByFirstName(String firstName) {
        List<Student> students = new ArrayList<>();
        String sql = "SELECT * FROM student WHERE first_name ILIKE ?";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setString(1, "%" + firstName + "%");
            ResultSet rs = pstmt.executeQuery();
            while (rs.next()) {
                Student s = new Student(
                    rs.getInt("id"),
                    rs.getString("first_name"),
                    rs.getString("last_name"),
                    rs.getInt("age"),
                    rs.getFloat("grade")
                );
                students.add(s);
            }
        } catch (SQLException e) {
            e.printStackTrace();
        }
        return students;
    }

    public List<Student> getStudentByGrade(Float grade) {
        List<Student> students = new ArrayList<>();
        String sql = "SELECT * FROM student WHERE grade > ?";
        try (PreparedStatement pstmt = conn.prepareStatement(sql)) {
            pstmt.setFloat(1, grade);
            ResultSet rs = pstmt.executeQuery();
            while (rs.next()) {
                Student s = new Student(
                    rs.getInt("id"),
                    rs.getString("first_name"),
                    rs.getString("last_name"),
                    rs.getInt("age"),
                    rs.getFloat("grade")
                );
                students.add(s);
            }
        } catch (SQLException e) {
            e.printStackTrace();
        }
        return students;
    }

}